# razv-data-engineering

./: .gitignore  Makefile  README.md
.github/workflows/: feature_branch.yml
01_fundamentos/: questions.txt  readme.md
02_ETL/ETL_pratice/: extract_data_from_csv.ipynb
04_linux/: readme.md
05_extract/extract_data_from_mongodb/: main.py
05_extract/extract_data_from_mysql/: create_table.sql  extract_mysql_full.py  (+1 more)
11_spark/: readme.md
14_python/: README.md
18_study_guide_AWS/: README.md
19_SQL/: README.md
MapReduce/: MapReduce.md  wordcount.py
Spark/: readme.md  spark_maps_and_lazy_evaluation.ipynb
capstone_project_udacity/: .gitignore  Capstone Project.ipynb  dl.cfg
data_lake/: readme.md
data_mesh/: notas.md
data_modeling/: readme.md
data_modeling_with_postgres/: README.md  etl.ipynb  test.ipynb
extracting_data_from_api/: main.py
how_bootcamp/A005_OOP/: .coverage  Makefile  apis.py  ingestao.py  ingestors.py  oop.py  principios.py  pyproject.toml
how_bootcamp/A005_OOP/.github/workflows/: feature_branch.yml
how_bootcamp/A005_OOP/concepts/: principios.py
how_bootcamp/A005_OOP/mercado_bitcoin/: Makefile  apis.py  ingestors.py  lambda_function.py  main.py  writers.py
how_bootcamp/A005_OOP/mercado_bitcoin/tests/: test_ingestors.py
how_bootcamp/A005_OOP/tests/: test_apis.py  test_ingestors.py  test_integration.py
linux/: comandos.md  readme.md
project_data_warehouse/: .gitignore  README.md  create_tables.py  etl.py  launch_cluster.py  sql_queries.py
project_disaster_response_pipelines/: README.md
spark/: readme.md
(+345 files in other folders)
